[fix] Icon name props validator & color name props validator & docs

--- a/stories/Icon/Icon.stories.mdx
+++ b/stories/Icon/Icon.stories.mdx
@@ -10,7 +10,73 @@ import Icon from "@/src/Elements/Core/Icon/Icon";
       defaultValue: "IconSearchLargeLine",
       control: {
         type: "select",
-        options: ["IconSearchLargeLine", "IconProfileLargeLine", "IconAlarmLargeLine", "IconArrowLargeLine", "IconMentoringLargeLine", "IconVodLargeLine", "IconAnswerLargeLine", "IconEduLargeLine", "IconCloseMediumFill", "IconExclamationSmallFill", "IconExclamationMediumLine", "IconExclamationLargeLine", "IconSelectedLargeLine", "IconKeylineLarge", "IconOverflowSmallFill", "IconCloseMediumLine", "IconSpinnerSmall", "IconSpinnerMedium", "IconSpinnerLarge", "IconPlusLargeLine"],
+        options: [
+          "IconPlusSmallLine",
+          "IconArrowSmallLine",
+          "IconOverflowSmallFill",
+          "IconTextArrowSmallFill",
+          "IconOfficialSmallFill",
+          "IconExclamationSmallFill",
+          "IconProfileSmallFill",
+          "IconCheckSmallFill",
+          "IconCheckMediumFill",
+          "IconQuestionMediumLine",
+          "IconLikeMediumFill",
+          "IconCommentMediumLine",
+          "IconCheckMediumLine",
+          "IconPlusMediumLine",
+          "IconExclamationMediumLine",
+          "IconArrowMediumLine",
+          "IconTextArrowMediumLine",
+          "IconFileMediumLine",
+          "IconTrashMediumLine",
+          "IconDownloadMediumLine",
+          "IconOverflowMediumFill",
+          "IconHourglassMediumLine",
+          "IconCloseMediumFill",
+          "IconInfoMediumFill",
+          "IconInfoMediumLine",
+          "IconCloseMediumLine",
+          "IconCheckCircleMediumFill",
+          "IconFilterMediumLine",
+          "IconResumeMediumLine",
+          "IconJobWikiMediumLine",
+          "IconAnalyticsMediumLine",
+          "IconProfileLargeFill",
+          "IconSelectedLargeLine",
+          "IconReplyLargeLine",
+          "IconPlusLargeLine",
+          "IconProfileLargeLine",
+          "IconAlarmLargeLine",
+          "IconSearchLargeLine",
+          "IconBackwardLargeLine",
+          "IconArrowLargeLine",
+          "IconTextArrowLargeLine",
+          "IconCloseLargeLine",
+          "IconKeylineLargeLine",
+          "IconExclamationLargeLine",
+          "IconFilterLargeLine",
+          "IconCheckLargeFill",
+          "IconAnalyticsLargeLine",
+          "IconInterviewLargeLine",
+          "IconEssayLargeLine",
+          "IconArrowXLargeLine",
+          "IconCloseXLargeLine",
+          "IconQuestionXLargeLine",
+          "IconAdoptXLargeLine",
+          "IconCreditPlusXLargeLine",
+          "IconCreditMinusXLargeLine",
+          "IconCelebrateXLargeLine",
+          "IconAnswerXLargeLine",
+          "IconMegaphoneXLargeLine",
+          "IconSpinnerSmall",
+          "IconSpinnerMedium",
+          "IconSpinnerLarge",
+          "IconMentoringLargeLine",
+          "IconVodLargeLine",
+          "IconAnswerLargeLine",
+          "IconEduLargeLine",
+        ],
       },
       table: {
         type: {
@@ -23,12 +89,44 @@ import Icon from "@/src/Elements/Core/Icon/Icon";
       table: {
         type: {
           summary: "목록",
-          detail: '"black", "gray900", "gray800", "gray700", "gray600", "gray500", "gray400", "gray300", "gray200", "gray100", "gray000", "white", "green800", "green600", "green400", "green100", "green000", "red800", "red600", "red400", "red100", "red000", "blue800", "blue600", "blue400", "blue100", "blue000", "yellow700", "yellow400", "yellow100"',
+          detail:
+            '"black", "gray900", "gray800", "gray700", "gray600", "gray500", "gray400", "gray300", "gray200", "gray100", "gray000", "white", "green800", "green600", "green400", "green100", "green000", "red800", "red600", "red400", "red100", "red000", "blue800", "blue600", "blue400", "blue100", "blue000", "yellow700", "yellow400", "yellow100"',
         },
       },
       control: {
         type: "select",
-        options: ["black", "gray900", "gray800", "gray700", "gray600", "gray500", "gray400", "gray300", "gray200", "gray100", "gray000", "white", "green800", "green600", "green400", "green100", "green000", "red800", "red600", "red400", "red100", "red000", "blue800", "blue600", "blue400", "blue100", "blue000", "yellow700", "yellow400", "yellow100"],
+        options: [
+          "black",
+          "gray900",
+          "gray800",
+          "gray700",
+          "gray600",
+          "gray500",
+          "gray400",
+          "gray300",
+          "gray200",
+          "gray100",
+          "gray000",
+          "white",
+          "green800",
+          "green600",
+          "green400",
+          "green100",
+          "green000",
+          "red800",
+          "red600",
+          "red400",
+          "red100",
+          "red000",
+          "blue800",
+          "blue600",
+          "blue400",
+          "blue100",
+          "blue000",
+          "yellow700",
+          "yellow400",
+          "yellow100",
+        ],
       },
     },
     loading: {
