[change] text hover value 000- > 100

--- a/stories/Button/Button.stories.mdx
+++ b/stories/Button/Button.stories.mdx
@@ -33,12 +33,12 @@ import Button from "@/src/Components/Button/Button";
       table: {
         type: {
           summary: "목록",
-          detail: '"primary" "success" "gray"',
+          detail: '"primary" "success" "gray" "error"',
         },
       },
       control: {
         type: "select",
-        options: ["primary", "success", "gray"],
+        options: ["primary", "success", "gray", "error"],
       },
     },
     type: {
