--- a/stories/Modal/WithFormModal.stories.mdx
+++ b/stories/Modal/WithFormModal.stories.mdx
@@ -1,9 +1,11 @@
-import { ArgsTable, Preview, Meta, Story, Props } from "@storybook/addon-docs/blocks";
-import BasicModal from "@/src/Components/Message/Modal/BasicModal";
+import { ArgsTable, Meta, Story } from "@storybook/addon-docs/blocks";
+import WithFormModal from "@/src/Components/Message/Modal/WithFormModal";
+import Input from "@/src/DataEntry/Input";
+import Button from "@/src/Components/Button/Button";
 
 <Meta
-    title="Modal/BasicModal"
-    component={ BasicModal }
+    title="DESIGN SYSTEM/Modal/WithFormModal"
+    component={ WithFormModal }
     argTypes={{
         show: {
             description: "모달 활성화",
@@ -68,24 +70,26 @@ import BasicModal from "@/src/Components/Message/Modal/BasicModal";
                 type: "text",
             },
         },
+        disabled: {
+            description: "버튼 비활성화",
+            defaultValue: false,
+            control: {
+                type: "boolean",
+            },
+        },
         title: {
             description: "모달 제목",
             defaultValue: "Basic Modal",
             control: { type: "text" },
         },
-        contents: {
-            description: "모달 내용",
-            defaultValue: ['본문을 작성하세요.', '문단을 분리할 때에는 margin:8px로 구분합니다.'],
-            control: { type: "array" },
-        }
     }}
 />
 
-export const Template = (args, { argTypes }) => ({
+export const Basic = (args, { argTypes }) => ({
     props: Object.keys(argTypes),
-    components: { BasicModal },
+    components: { WithFormModal, Input, Button },
     template:
-        `<BasicModal
+        `<WithFormModal
             :show.sync="show"
             :show-close-button="showCloseButton"
             :persistent="persistent"
@@ -99,17 +103,24 @@ export const Template = (args, { argTypes }) => ({
                 {{ title }}
             </template>
             <template v-slot:contents>
-                <div v-for="content in contents" v-html="content" />
+                <div style="display: flex; flex-direction: row; align-items: center; justify-content: space-between" class="mb-12">
+                    <Input type="underlined" placeholder="underlined input: 버튼 height: 36px" full class="mr-4" />
+                    <Button type="outlined">버튼1</Button>
+                </div>
+                <div style="display: flex; flex-direction: row; align-items: center; justify-content: space-between">
+                    <Input full placeholder="outlined input: 버튼 height 40px" class="mr-4" />
+                    <Button type="outlined">버튼2</Button>
+                </div>
             </template>
-        </BasicModal>`
+        </WithFormModal>`
 });
 
-# BasicModal
+# WithFormModal
 
-**BasicModal** 컴포넌트의 문서입니다.
+**WithFormModal** 컴포넌트의 문서입니다.
 
-<Story name="docs" height="100px">
-    {Template.bind({})}
+<Story name="Basic" height="100px">
+    {Basic.bind({})}
 </Story>
 
-<ArgsTable story="docs" />
+<ArgsTable story="Basic" />
