--- a/stories/Modal/PermissionModal.stories.mdx
+++ b/stories/Modal/PermissionModal.stories.mdx
@@ -68,8 +68,8 @@ import PermissionModal from "@/src/Components/Message/Modal/PermissionModal";
         },
         contents: {
             description: "모달 내용",
-            defaultValue: "본문은 없거나 두 줄을 초과할 수 없습니다.",
-            control: { type: "text" },
+            defaultValue: ['본문은 없거나 두 줄을 초과할 수 없습니다.'],
+            control: { type: "array" },
         },
     }}
 />
@@ -77,6 +77,11 @@ import PermissionModal from "@/src/Components/Message/Modal/PermissionModal";
 export const Basic = (args, { argTypes }) => ({
     props: Object.keys(argTypes),
     components: { PermissionModal },
+    data() {
+        return {
+            showModal: true,
+        }
+    },
     template:
         `<PermissionModal
             :show.sync="show"
@@ -84,16 +89,14 @@ export const Basic = (args, { argTypes }) => ({
             :left-button-color="leftButtonColor"
             :right-button-color="rightButtonColor"
             :persistent="persistent"
-            :loading="loading"
             :success-message="successMessage"
-            :show-action-button="showActionButton"
             :max-width="maxWidth"
         >
             <template v-slot:title>
                 {{ title }}
             </template>
             <template v-slot:contents>
-                {{ contents }}
+                <div v-for="content in contents" v-html="content" />
             </template>
         </PermissionModal>`
 });
