--- a/stories/Modal/BasicModal.stories.mdx
+++ b/stories/Modal/BasicModal.stories.mdx
@@ -55,7 +55,7 @@ import BasicModal from "@/src/Components/Message/Modal/BasicModal";
             },
         },
         persistent: {
-            description: "mask 클릭해도 모달 닫지 않기",
+            description: "overlay 클릭해도 모달 닫지 않기",
             defaultValue: false,
             control: {
                 type: "boolean",
