--- a/stories/Modal/PermissionModal.stories.mdx
+++ b/stories/Modal/PermissionModal.stories.mdx
@@ -48,7 +48,7 @@ import PermissionModal from "@/src/Components/Message/Modal/PermissionModal";
             }
         },
         persistent: {
-            description: "mask 클릭해도 모달 닫지 않기",
+            description: "overlay 클릭해도 모달 닫지 않기",
             defaultValue: false,
             control: {
                 type: "boolean",
