--- a/stories/Modal/WithFormModal.stories.mdx
+++ b/stories/Modal/WithFormModal.stories.mdx
@@ -57,7 +57,7 @@ import Button from "@/src/Components/Button/Button";
             },
         },
         persistent: {
-            description: "mask 클릭해도 모달 닫지 않기",
+            description: "overlay 클릭해도 모달 닫지 않기",
             defaultValue: false,
             control: {
                 type: "boolean",
