--- a/stories/Modal/BasicModal.stories.mdx
+++ b/stories/Modal/BasicModal.stories.mdx
@@ -1,5 +1,6 @@
-import { ArgsTable, Meta, Story } from "@storybook/addon-docs/blocks";
+import { ArgsTable, Meta, Story, Canvas } from "@storybook/addon-docs/blocks";
 import BasicModal from "@/src/Components/Message/Modal/BasicModal";
+import Button from "@/src/Components/Button/Button";
 
 <Meta
     title="DESIGN SYSTEM/Modal/BasicModal"
@@ -7,7 +8,7 @@ import BasicModal from "@/src/Components/Message/Modal/BasicModal";
     argTypes={{
         show: {
             description: "모달 활성화",
-            defaultValue: true,
+            defaultValue: false,
             control: {
                 type: "boolean",
             },
@@ -83,25 +84,28 @@ import BasicModal from "@/src/Components/Message/Modal/BasicModal";
 
 export const Basic = (args, { argTypes }) => ({
     props: Object.keys(argTypes),
-    components: { BasicModal },
-    template:
-        `<BasicModal
-            :show.sync="show"
-            :show-close-button="showCloseButton"
-            :persistent="persistent"
-            :align="align"
-            :loading="loading"
-            :success-message="successMessage"
-            :show-action-button="showActionButton"
-            :max-width="maxWidth"
-        >
-            <template v-slot:title>
-                {{ title }}
-            </template>
-            <template v-slot:contents>
-                <div v-for="content in contents" v-html="content" />
-            </template>
-        </BasicModal>`
+    components: { BasicModal, Button },
+    template: `
+        <div>
+            <Button @click="show = true">Open</Button>
+            <BasicModal
+                :show.sync="show"
+                :show-close-button="showCloseButton"
+                :persistent="persistent"
+                :align="align"
+                :loading="loading"
+                :success-message="successMessage"
+                :show-action-button="showActionButton"
+                :max-width="maxWidth"
+            >
+                <template v-slot:title>
+                    {{ title }}
+                </template>
+                <template v-slot:contents>
+                    <div v-for="content in contents" v-html="content" />
+                </template>
+            </BasicModal>
+        </div>`
 });
 
 # BasicModal
@@ -113,3 +117,37 @@ export const Basic = (args, { argTypes }) => ({
 </Story>
 
 <ArgsTable story="Basic" />
+
+## Stories
+### FullText
+<Canvas>
+    <Story name="FullText" height="100px">
+        {{
+            data: () => ({
+                show: false,
+            }),
+            template: `
+                <div>
+                    <Button @click="show = true">Open</Button>
+                    <BasicModal
+                        :show.sync="show"
+                        align="left"
+                    >
+                        <template v-slot:title>
+                          이용약관 및 유의사항
+                        </template>
+                        <template v-slot:contents>
+                            - 이용권 특성상 구매 후 중도 해지 및 이에 따른 환불이 불가능합니다.<br />
+                            - 일부 콘텐츠는 작성자 또는 답변자 요청으로 열람이 제한될 수 있습니다.<br />
+                            - 취소하면 결제에 사용된 할인 쿠폰은 소멸되며 재사용할 수 없습니다.<br />
+                            - 결제에 따른 개인정보는 '개인정보 처리방침'에 근거하여 관리됩니다.
+                        </template>
+                    </BasicModal>
+                </div>
+            `,
+            components: {
+                BasicModal, Button
+            }
+        }}
+    </Story>
+</Canvas>
