--- a/stories/Modal/FullscreenModal.stories.mdx
+++ b/stories/Modal/FullscreenModal.stories.mdx
@@ -1,5 +1,6 @@
 import { ArgsTable, Meta, Story } from "@storybook/addon-docs/blocks";
 import FullscreenModal from "@/src/Components/Message/Modal/FullscreenModal";
+import Button from "@/src/Components/Button/Button";
 
 <Meta
     title="DESIGN SYSTEM/Modal/FullscreenModal"
@@ -7,7 +8,7 @@ import FullscreenModal from "@/src/Components/Message/Modal/FullscreenModal";
     argTypes={{
         show: {
             description: "모달 활성화",
-            defaultValue: true,
+            defaultValue: false,
             control: {
                 type: "boolean",
             },
@@ -29,16 +30,19 @@ import FullscreenModal from "@/src/Components/Message/Modal/FullscreenModal";
 
 export const Basic = (args, { argTypes }) => ({
     props: Object.keys(argTypes),
-    components: { FullscreenModal },
-    template:
-        `<FullscreenModal
-            :show.sync="show"
-            :show-close-button="showCloseButton"
-        >
-            <template>
-                {{ contents }}
-            </template>
-        </FullscreenModal>`
+    components: { FullscreenModal, Button },
+    template: `
+        <div>
+            <Button @click="show = true">Open</Button>
+            <FullscreenModal
+                :show.sync="show"
+                :show-close-button="showCloseButton"
+            >
+                <template>
+                    {{ contents }}
+                </template>
+            </FullscreenModal>
+        </div>`
 });
 
 # FullscreenModal
