--- a/stories/Button/LinkButton.stories.mdx
+++ b/stories/Button/LinkButton.stories.mdx
@@ -10,9 +10,9 @@ import LinkButton from "@/src/Components/Button/LinkButton";
             defaultValue: "링크 버튼",
             control: { type: "text" },
         },
-        element: {
-            description: "태그 타입",
-            defaultValue: "div",
+        type: {
+            description: "글자 크기",
+            defaultValue: "body1",
             control: {
                 type: "text",
             },
