[add] icon large type (IconDownloadLargeLine, IconCheckLargeLine)

--- a/stories/Icon/Icon.stories.mdx
+++ b/stories/Icon/Icon.stories.mdx
@@ -76,6 +76,8 @@ import Icon from "@/src/Elements/Core/Icon/Icon";
           "IconVodLargeLine",
           "IconAnswerLargeLine",
           "IconEduLargeLine",
+          "IconDownloadLargeLine",
+          "IconCheckLargeLine"
         ],
       },
       table: {
